<resources>
    <string name="app_name">DummyApp</string>
    <string name="auth_title">Authorization</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Log in</string>
    <string name="button_add_cart">Add cart</string>
    <string name="description_label">Description</string>
    <string name="price">%d$</string>
    <string name="first_and_second_name_label">First name, Second name</string>
    <string name="credentials_label">Credentials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating_label">Rating</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="quantity_label">quantity</string>

    <!--Preferences-->
    <string name="credentials_title_pref">Credentials</string>

    <string name="phone_profile">Phone</string>
    <string name="email_profile">Email</string>
    <string name="birthday_profile">Birthday</string>
    <string name="sex_profile">Sex</string>
    <string name="fav_profiles">Favourites</string>
    <string name="log_out">Log out</string>
    <!--Profile Fragment-->
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <!--Profile Fragment-->
</resources>